--- a/src/components/time-picker/TimePicker.module.scss
+++ b/src/components/time-picker/TimePicker.module.scss
@@ -7,21 +7,45 @@
       z-index: 1;
       left: 5px;
       background: #fff;
-      display: flex;
+      width: fit-content;
+      .cx_time_lists {
+        display: flex;
+      }
+      .cx_time_confirm {
+        display: flex;
+        justify-content: end;
+        padding: 2px;
+        button {
+          background: #0081c5;
+          border-radius: 10px;
+          color: #fff;
+          border: none;
+          box-shadow: none;
+          padding: 2px 7px;
+        }
+      }
     }
     .cx_time_ul {
+      width: auto;
       margin-top: 10px;
       padding: 0 5px;
       height: 150px;
+      padding-bottom: 52%;
       overflow: scroll !important;
     }
     .cx_time_li_active {
-      color: #fff;
+      color: #fff !important;
       background: var(--blue);
     }
     .cx_time_li {
       cursor: pointer;
       padding: 5px 20px;
+      color: #000;
+
+      &.non_selectable {
+        color: #c7c7c7;
+      }
+
       &:hover {
         color: #fff;
         background: #0081c5aa;
