--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7390,6 +7390,12 @@ ul.recent-act-lw-main .act-amt-status-wrap {
 .dashboard-recent-contact-sec .recent-contact-sec .send-top-right-sec {
   justify-content: flex-end;
 }
+.dashboard-recent-contact-sec .swiper-wrapper {
+  align-items: center;
+}
+.dashboard-recent-contact-sec .swiper-wrapper .recent-con-img-wrap {
+  box-shadow: 0px 20.434px 40.868px rgba(0, 0, 0, 0.08);
+}
 .dashboard-graph-sec .dashboard-recent-activity-sec ul.activity-lw-main li {
   cursor: default;
 }
