--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -4216,7 +4216,7 @@ margin-bottom:0px;
 .wallet-fund-row-amt .col-12 {
   background: #f3f3f3;
   border-radius: 18px;
-  height: 175px;
+  /* height: 175px; */
   display: flex;
   align-items: center;
   width: 100%;
