--- a/src/components/modals/contactList.css
+++ b/src/components/modals/contactList.css
@@ -2,13 +2,10 @@
   flex-wrap: nowrap;
   display: flex;
   width: 100%;
+  margin-right: 20px;
 }
 .con-list-pop .modal-dialog {
   max-width: 700px !important;
-}
-.con-md-search-wrap {
-  width: 100%;
-  margin-right: 20px;
 }
 .con-md-delbtn {
   padding: 14px 20px;
@@ -66,7 +63,7 @@
   font-size: 15px;
   line-height: 22px;
   font-weight: 500;
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
 }
 .cm-listing-check input:checked ~ label:after {
   opacity: 1;
